@@ -1,9 +1,9 @@
-<p><strong>Daimonin MMORPG</strong>  has been successfully installed!
+<p><strong>Daimonin MMORPG</strong>  has been successfully installed!</p>
 
 <p>To play the game either run the launcher from a terminal or click the menu
 entry from the desktop (different distros present this in different ways but
-it is often accessible via some sort of desktop menu).
+it is often accessible via some sort of desktop menu).</p>
 
 <hr />
 
-<p style="text-align: right;">-- The Daimonin MMORPG Team, <a href="http://www.daimonin.org">www.daimonin.org</a>
+<p style="text-align: right;">-- The Daimonin MMORPG Team, <a href="http://www.daimonin.org">www.daimonin.org</a></p>
