@@ -35,7 +35,7 @@
 {{gui qt <center><img src="logo.png" alt="LOGO"></center>}}
 <hr />
 
-<p>Welcome! This program will install the <strong>Daimonin MMORPG</strong> client on your computer.
+<p>Welcome! This program will install the <strong>Daimonin MMORPG</strong> client on your computer.</p>
 
 <p>Just follow the instructions and click OK to proceed. Or click Cancel at any
-time to abort the installation.
+time to abort the installation.</p>
